--- a/views/admin/afficClients.phtml
+++ b/views/admin/afficClients.phtml
@@ -20,13 +20,13 @@
             <div class="row mb-1 align-items-center">
                 <label for="admin_client_mdp" class="col-lg-5 col-form-label">Mot de passe</label>
                 <div class="col-lg-7">
-                    <input id="admin_client_mdp" name="admin_client_mdp" type="password" class="form-control form-control-sm">
+                    <input required id="admin_client_mdp" name="admin_client_mdp" type="password" class="form-control form-control-sm">
                 </div>
             </div>
             <div class="row mb-1 align-items-center">
                 <label for="admin_client_mdp_verif" class="col-lg-5 col-form-label">Vérification du mot de passe</label>
                 <div class="col-lg-7">
-                    <input id="admin_client_mdp_verif" name="admin_client_mdp_verif" type="password" class="form-control form-control-sm">
+                    <input required id="admin_client_mdp_verif" name="admin_client_mdp_verif" type="password" class="form-control form-control-sm">
                 </div>
             </div>
             <?php
