--- a/views/admin/afficCategories.phtml
+++ b/views/admin/afficCategories.phtml
@@ -99,7 +99,7 @@
                     <div class="row mb-1 align-items-center">
                         <label for="admin_new_ref_categorie" class="col-lg-5 col-form-label">Ref</label>
                         <div class="col-lg-7">
-                            <input required id="admin_new_ref_categorie" name="admin_new_ref_categorie" type="text" class="form-control form-control-sm">
+                            <input required pattern="^[a-z\-]*$"  id="admin_new_ref_categorie" name="admin_new_ref_categorie" type="text" class="form-control form-control-sm">
                         </div>
                     </div>
                     <div class="row mb-1 align-items-center">
