--- a/views/admin/afficProduits.phtml
+++ b/views/admin/afficProduits.phtml
@@ -161,7 +161,7 @@
                     <div class="row mb-1 align-items-center">
                         <label for="admin_new_ref_produit" class="col-lg-5 col-form-label">Ref</label>
                         <div class="col-lg-7">
-                            <input required maxlength="20" id="admin_new_ref_produit" name="admin_new_ref_produit" type="text" class="form-control form-control-sm">
+                            <input required pattern="^[a-z\-]*$" maxlength="20" id="admin_new_ref_produit" name="admin_new_ref_produit" type="text" class="form-control form-control-sm">
                         </div>
                     </div>
                     <div class="row mb-1 align-items-center">
